update unit tests

--- a/pubnub/Makefile.am
+++ b/pubnub/Makefile.am
@@ -27,6 +27,7 @@ source_files =  src/listener.c \
 				src/pubnub_init.c \
 				src/process.c \
 				src/publisher.c \
+				src/json_misc.c \
 				src/fifo.c
 
 bin_pubnub_listener_SOURCES = src/main_listener.c ${source_files}
@@ -34,11 +35,14 @@ bin_pubnub_listener_SOURCES = src/main_listener.c ${source_files}
 if ENABLE_TEST
 check_PROGRAMS = bin/test_queue bin/test_control_channel
 TESTS = $(check_PROGRAMS)
-bin_test_queue_SOURCES = test/test_queue.c test/unit_test_main.c
+bin_test_queue_SOURCES = test/test_queue.c
 bin_test_queue_CPPFLAGS = $(AM_CPPFLAGS) ${TEST_CFLAGS}
 bin_test_queue_LDFLAGS = $(AM_LDFLAGS) ${TEST_LDFLAGS}
 
-bin_test_control_channel_SOURCES = test/test_control_channel.c test/unit_test_main.c ${source_files}
+bin_test_control_channel_SOURCES = test/test_control_channel.c \
+								   test/unit_test_main.c \
+								   test/test_data_channel_proccess.c \
+								   ${source_files}
 bin_test_control_channel_CPPFLAGS = $(AM_CPPFLAGS) ${TEST_CFLAGS}
 bin_test_control_channel_LDFLAGS = $(AM_LDFLAGS) ${TEST_LDFLAGS}
 
