--- a/pubnub/configure.ac
+++ b/pubnub/configure.ac
@@ -44,10 +44,7 @@ AC_ARG_ENABLE([debug],
 )
 
 LT_INIT
-AC_LANG([C++])
-AC_PROG_CC
-AC_PROG_CXX
-AM_PROG_CC_C_O
+AC_PROG_CC_C99
 AC_PROG_LD
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
